--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,12 @@
  html, body {
 
+ 	margin: 0px !important;    
+    width: 100%;
     overscroll-behavior-y: contain;
     -webkit-user-select: none;
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
+
     
 }
 
