--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
     -webkit-user-select: none;
     -webkit-tap-highlight-color: transparent;
     -webkit-touch-callout: none;
+
 }
 
 .container { 
@@ -16,4 +17,16 @@
 
 .column {
     max-width: 95%;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
